# chess-bench

./: .env  .env.example  AGENTS.md  agents.md  chessbench.db  main.py  pyproject.toml
app/: config.py  database.py  dependencies.py  main.py
app/internal/: openrouter.py  orchestrator.py  ratings.py  stockfish.py
app/models/: __init__.py  _utils.py  game.py  model.py  move.py  schedule.py
app/routers/: admin.py  dashboard.py  games.py  models.py
app/services/: game_manager.py
app/static/: htmx.min.js  styles.css
app/templates/: base.html  dashboard.html
app/templates/admin/: index.html
app/templates/partials/: active_boards.html  completed_games.html  rating_table.html
tests/: conftest.py  test_api.py  test_orchestrator.py
